test_case/rust-lang_rust/50725_389000079.rs
rust
#![feature(use_extern_macros)]

use std::panic::{self};

fn main() {
    assert!(true); //~ ERROR expected (), found bool
}
